# cern-project

./: .gitignore  .sconsign.dblite  CMakeLists.txt  Linkdef.h  NTOFDB  README.md  correlation.cpp  correlation.hpp  correlationentry.hpp  createdb.py  dateutils.cpp  dateutils.hpp  gui.cpp  gui.hpp  installboost.sh  main.cpp  project.pro
fast/: .sconsign.dblite  castor.cpp  castor.hpp  fastreader.cpp  fastreader.hpp  histogram.cpp  peakanalyzer.cpp  peakanalyzer.hpp  peakwindow.cpp  peakwindow.hpp  testpeakanalyzer.cpp  window.hpp
fast/completereader/: DaqDefs.h  DaqType.h  analyse.h  fio.cpp  fio.h  header.cpp  header.h  main  main.cpp  misc.cpp  misc.h  unpack.cpp  unpackx.cpp  unpackx.h
fast/completereader/config/: READOUT.conf
fast/reader/: Makefile  RawReader.cc  RawReader.hh  Reader.cc  doRawReader.sh  main  main.cc  sum.py
gzstream/: gzstream.h
slow/: slowreader.cpp  slowreader.hpp
